<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/items_todo_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp">


        <TextView
            android:id="@+id/todo_progressbar_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:text="@string/to_do_progress_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/progress_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todo_progressbar_title_textview"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="Progress"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_title_label"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/task_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progress_title_label"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/items_to_do_progressbar" />

                <TextView
                    android:id="@+id/done_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progress_textview"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="11dp"
                    android:layout_toEndOf="@+id/items_to_do_progressbar"
                    android:text="Done" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_below="@+id/items_todo_progress_layout"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/todo_items_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/todo_items_heading"
            android:textColor="@color/textColor" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_to_do_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:elevation="5dp"
            android:layout_weight="7.33"></android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_item_title_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000"
                    android:hint="@string/add_item_placeholder"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_item_description_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:visibility="visible"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_task_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000"
                    android:hint="@string/add_item_description"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/action_add" />
    </LinearLayout>

</RelativeLayout>
